# operating-systems-1

./: .gitignore  hw1_test.c
arch/i386/kernel/: entry.S  restrict.c
include/linux/: sched.h
kernel/: exit.c  fork.c  hw1_syscalls.c
wet1/: hw1_syscalls.c  hw1_syscalls.h  hw1_test.c  test_new.c  קוד אישור.txt
wet1/arch/i386/kernel/: entry.S
wet1/kernel/: fork.c  hw1_syscalls.c
wet2/: cp_files  hw2_test.c  test.c  קוד אישור.txt
wet2/include/linux/: sched.h
wet2/kernel/: fork.c  sched.c  sys.c
wet3/: CMakeLists.txt
wet3/Code_Skeleton/Part1/: PCQueue.hpp  Semahore.cpp  Semaphore.hpp  part1_main.cpp
wet3/Code_Skeleton/Part2/: Game.cpp  Game.hpp
wet3/WHW3_Files/Code_Skeleton/: Consumer.cpp  Game.cpp  Game.hpp  LookUpTable.h  Semaphore.cpp  Thread.hpp  job.h  main.cpp  utils.cpp  utils.hpp
wet3/WHW3_Files/Code_Skeleton/Part1/: Headers.hpp  PCQueue.hpp  Semahore.cpp  Semaphore.hpp
wet3/WHW3_Files/Code_Skeleton/Part2/: Arr.h  Consumer.cpp  Consumer.h  Game.cpp  Game.hpp  LookUpTable.h  Thread.hpp  job.h  main.cpp  utils.cpp  utils.hpp
wet3/WHW3_Files/Code_Skeleton/final/: Consumer.cpp  Consumer.h  PCQueue.hpp  Semaphore.hpp  job.h  submitters.txt  utils.cpp  קוד אישור.txt
wet3/WHW3_Files/Code_Skeleton/tests/: maintest.cpp  queue_test.cpp  semaphore_test.cpp
wet4/: CMakeLists.txt  facebook_test.cpp  main.cpp  malloc_1.cpp  malloc_1.h  malloc_2.cpp  malloc_2.h  malloc_3.cpp  malloc_3.h  tamuz_tests_hw4_malloc2.cpp  tamuz_tests_hw4_malloc3.cpp  test1.cpp  test2.cpp  test2_ld.cpp  test3.cpp  test_realloc.cpp  קוד אישור.txt
(+1 files in other folders)
